example/secondfile/objects/Related_Documents__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Related_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>SentToeSign</fullName>
                </value>
                <value>
                    <fullName>CustomerSigned</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>ContractExecutionFailed</fullName>
                </value>
                <value>
                    <fullName>ImageLoadedToDocViewer</fullName>
                </value>
                <value>
                    <fullName>ImageNotLoadedToDocViewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_SubType__c</fullName>
        <label>Contract SubType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>UA</fullName>
                </value>
                <value>
                    <fullName>BVOIP</fullName>
                </value>
                <value>
                    <fullName>CPNI</fullName>
                </value>
                <value>
                    <fullName>IPT</fullName>
                </value>
                <value>
                    <fullName>SSTC 10 to UA</fullName>
                </value>
                <value>
                    <fullName>SSTC 1-8 to UA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocumentID__c</fullName>
        <label>DocumentID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_URL__c</fullName>
        <label>Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document_type__c</fullName>
        <label>Document type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>MRA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pricing Schedule</fullName>
                </value>
                <value>
                    <fullName>Master Agreement</fullName>
                </value>
                <value>
                    <fullName>CPNI</fullName>
                </value>
                <value>
                    <fullName>IPT</fullName>
                </value>
                <value>
                    <fullName>Business Plan</fullName>
                </value>
                <value>
                    <fullName>Marketing Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Related_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Notes</relationshipLabel>
        <relationshipName>Related_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Schedule</label>
        <referenceTo>RDS_Pricing_Schedule_Detail__c</referenceTo>
        <relationshipLabel>Related Notes</relationshipLabel>
        <relationshipName>Related_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Related Note</label>
    <listViews>
        <fullName>All_Related_Notes_Account</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Title__c</columns>
        <columns>Note__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Related_Documents__c.Note</value>
        </filters>
        <label>All Related Notes (Account) 2016+</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pricing_URL</fullName>
        <columns>Pricing_Schedule__c</columns>
        <columns>NAME</columns>
        <columns>Contract_SubType__c</columns>
        <columns>DocumentID__c</columns>
        <columns>Document_URL__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Title__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/22/2017 12:00 AM</value>
        </filters>
        <label>Pricing URL</label>
    </listViews>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Related Documents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Notes</pluralLabel>
    <recordTypes>
        <fullName>Attachment</fullName>
        <active>true</active>
        <description>Record Type for Attachment</description>
        <label>Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Docviewer</fullName>
        <active>true</active>
        <description>Stores Docviewer information for attachments</description>
        <label>Docviewer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Note</fullName>
        <active>true</active>
        <description>Record Type for Note</description>
        <label>Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Office_Hand</fullName>
        <active>true</active>
        <label>Office@Hand</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pricing_Schedule</fullName>
        <active>true</active>
        <description>Record type for Pricing Schedule</description>
        <label>Pricing Schedule</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>